# ChangeLog for dev-dotnet/nini
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/nini/ChangeLog,v 1.3 2006/02/01 21:47:38 metalgod Exp $

  01 Feb 2006; Luis Medinas <metalgod@gentoo.org> nini-1.0.0-r1.ebuild:
  Added ~amd64 keyword. Closes bug #121115.

*nini-1.0.0-r1 (17 Nov 2005)

  17 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  files/nini-1.0.0.build, +nini-1.0.0-r1.ebuild:
  Adding debug useflag support with revbump.

*nini-1.0.0 (08 Nov 2005)

  08 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/nini-1.0.0.build, +files/nini.pc.in, +metadata.xml,
  +nini-1.0.0.ebuild:
  Initial import of Nini.  Resolves bug #101676.
