@@ -2,11 +2,16 @@ AUX nini-1.0.0.build 2129 RMD160 df4cfc15ee3bed9168440cbd1ac84bb320e5e4d5 SHA1 c
 MD5 f77fa582a31db69188f92b89eb751b54 files/nini-1.0.0.build 2129
 RMD160 df4cfc15ee3bed9168440cbd1ac84bb320e5e4d5 files/nini-1.0.0.build 2129
 SHA256 e3b7d08592c029fb2a53c850f7a300971c1e03ff583324b002f25bb22ae4996d files/nini-1.0.0.build 2129
+AUX nini-1.1.0.build 1181 RMD160 9c5508a582e3dcdb979383e9f595a19be0dca5d2 SHA1 6f2bcdd4ce0fcfae3182203bd089b965071fe65c SHA256 f623618f26f09e1c99f80f760eb6eec49ac81f740b9c96b7c83221be86f3f094
+MD5 9f3290ac777fd926d285c66f4f4eee63 files/nini-1.1.0.build 1181
+RMD160 9c5508a582e3dcdb979383e9f595a19be0dca5d2 files/nini-1.1.0.build 1181
+SHA256 f623618f26f09e1c99f80f760eb6eec49ac81f740b9c96b7c83221be86f3f094 files/nini-1.1.0.build 1181
 AUX nini.pc.in 143 RMD160 ccfa679b6c3d9e29a4a154b9d212bb60e42e8257 SHA1 38b252315515a1876da32a778b6fcbd226ac242c SHA256 cd4ac35c5a3e63ba45b04ec9659ef60118388cb2e5a174d35b63170b4ae9bb4e
 MD5 387a2b28d8c145d04360c42db79b2771 files/nini.pc.in 143
 RMD160 ccfa679b6c3d9e29a4a154b9d212bb60e42e8257 files/nini.pc.in 143
 SHA256 cd4ac35c5a3e63ba45b04ec9659ef60118388cb2e5a174d35b63170b4ae9bb4e files/nini.pc.in 143
 DIST Nini-1.0.0.zip 1118461
+DIST Nini-1.1.0.zip 1246584 RMD160 64a2d0697da527061ca6b5b50075e2e365338e32 SHA1 ba739aacda956d5daf115402a6965379f521add7 SHA256 460cc71d931a8fb9afbc86c764eddb926051a71bde0f7deb04e22066b125270b
 EBUILD nini-1.0.0-r1.ebuild 1343 RMD160 fb41499bef2c0a01b2058d68c2f6961ab86a4369 SHA1 349d83fdfb09cdfa9faf84928f381f6e97e1fcc2 SHA256 f77203544631aa3dbf3847fd64208ca447cda89dd79f4ac3b54283bacc0e4275
 MD5 58031d004cc5f6c9a11ea71564fed93c nini-1.0.0-r1.ebuild 1343
 RMD160 fb41499bef2c0a01b2058d68c2f6961ab86a4369 nini-1.0.0-r1.ebuild 1343
@@ -15,10 +20,14 @@ EBUILD nini-1.0.0.ebuild 1218 RMD160 fa88fcbd52d5415b6b3ef03c992b1b31c45eb324 SH
 MD5 e6bb8f38bdb400cbcc3a75a8e23765c8 nini-1.0.0.ebuild 1218
 RMD160 fa88fcbd52d5415b6b3ef03c992b1b31c45eb324 nini-1.0.0.ebuild 1218
 SHA256 d100020e86afc1aca2c619283b77391e9b019443da1e923325f2295e175612b2 nini-1.0.0.ebuild 1218
-MISC ChangeLog 719 RMD160 3c6a66851619da7c9d57ab6257b70d0dcb83e46d SHA1 b63b9a5f3297513eef960169dfbd85ebe76a25ea SHA256 9cd949a32aa535f516042e2d40f9db40a44494991f64c5d8af2a906c7bc9df99
-MD5 c3847affd6ad271d54510aefc9bdee29 ChangeLog 719
-RMD160 3c6a66851619da7c9d57ab6257b70d0dcb83e46d ChangeLog 719
-SHA256 9cd949a32aa535f516042e2d40f9db40a44494991f64c5d8af2a906c7bc9df99 ChangeLog 719
+EBUILD nini-1.1.0.ebuild 1340 RMD160 0279f54064fcd714924c76da692fd0e8462ddbf9 SHA1 eb0dfc421a4c2b0d3d65597de23ed3b43fed1ede SHA256 d6f35ac89da2758ea994baedc704557cf9c65103b5675256aab4679a2595a63d
+MD5 3f548ae7a3008ad93e07fb481cbeba69 nini-1.1.0.ebuild 1340
+RMD160 0279f54064fcd714924c76da692fd0e8462ddbf9 nini-1.1.0.ebuild 1340
+SHA256 d6f35ac89da2758ea994baedc704557cf9c65103b5675256aab4679a2595a63d nini-1.1.0.ebuild 1340
+MISC ChangeLog 893 RMD160 8ff56c4e9286aa1a29acbf763b7ec347b9dc614f SHA1 1aba7a812d979b32bb45ddfd2d43359cc2f7b544 SHA256 bdf5a16a63db6ced3615854e8c0098b1065ac25b2c1e5ac41fa67d3ebfa9d7ca
+MD5 7372cf9a13324d46fcf997eb848305ac ChangeLog 893
+RMD160 8ff56c4e9286aa1a29acbf763b7ec347b9dc614f ChangeLog 893
+SHA256 bdf5a16a63db6ced3615854e8c0098b1065ac25b2c1e5ac41fa67d3ebfa9d7ca ChangeLog 893
 MISC metadata.xml 341 RMD160 859a7dca8d1cb643638f1660204f1ac866c5d4d6 SHA1 1e8a20d423c0c203f0ab3686114564cd6ef8172a SHA256 da5ba9cc62cd0c02836a2ba8d272b0834c9aa13ebbeb757b00678df6b09c18af
 MD5 30f80a060407365f6c87eedde0dfdbfd metadata.xml 341
 RMD160 859a7dca8d1cb643638f1660204f1ac866c5d4d6 metadata.xml 341
@@ -29,3 +38,6 @@ SHA256 ea72883c3f13e431f0e056bfbc2a80895444f3cc2b19e2520177d457ee4e6c31 files/di
 MD5 3eb6b2b4d8bd7af0b522fd82eb2d7bdf files/digest-nini-1.0.0-r1 60
 RMD160 b4abb0c55787064d58c8d399eafdf11f57703f1a files/digest-nini-1.0.0-r1 60
 SHA256 ea72883c3f13e431f0e056bfbc2a80895444f3cc2b19e2520177d457ee4e6c31 files/digest-nini-1.0.0-r1 60
+MD5 185ad36d3c2b81a693409895ed05cccf files/digest-nini-1.1.0 226
+RMD160 aeff4d86cb2404c344d158166934cf237f148e3e files/digest-nini-1.1.0 226
+SHA256 8fe510c5864c37384fb72feb67bc27a320b923ddaa122292dd9e3bbfd4d66b5e files/digest-nini-1.1.0 226
