@@ -1,0 +1,3 @@
+MD5 63384f75fabd401cff1500f738d452f4 Nini-1.1.0.zip 1246584
+RMD160 64a2d0697da527061ca6b5b50075e2e365338e32 Nini-1.1.0.zip 1246584
+SHA256 460cc71d931a8fb9afbc86c764eddb926051a71bde0f7deb04e22066b125270b Nini-1.1.0.zip 1246584
