@@ -1,0 +1,38 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<project name="Nini" default="compile" basedir=".">
+   <description>.NET Configuration Library</description>
+
+   <property name="debug" value="false" overwrite="false"/>
+   <property name="project.name" value="Nini"/>
+
+   <property name="build" value="build"/>
+   <property name="src" value="Source"/>
+
+   <!-- Switch to .NET 2.0 Framework -->
+   <property name="nant.settings.currentframework" value="mono-2.0"/>
+
+   <target name="init">
+      <mkdir dir="${build}" if="${not directory::exists(build)}"/>
+   </target>
+
+   <target name="compile" depends="init">
+      <csc target="library" output="${build}/${project.name}.dll" debug="${debug}">
+         <references>
+            <include name="System.dll"/>
+            <include name="System.Xml.dll"/>
+         </references>
+
+         <sources>
+            <include name="${src}/*.cs"/>
+            <include name="${src}/Ini/*.cs"/>
+            <include name="${src}/Util/*.cs"/>
+            <include name="${src}/Config/*.cs"/>
+         </sources>
+      </csc>
+   </target>
+
+   <target name="clean">
+      <delete dir="${build}" if="${directory::exists(build)}"/>
+   </target>
+</project>
