@@ -1,6 +1,12 @@
 # ChangeLog for dev-dotnet/nini
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/nini/ChangeLog,v 1.3 2006/02/01 21:47:38 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/nini/ChangeLog,v 1.4 2006/08/27 21:50:41 compnerd Exp $
+
+*nini-1.1.0 (27 Aug 2006)
+
+  27 Aug 2006; Saleem Abdulrasool <compnerd@gentoo.org>
+  +files/nini-1.1.0.build, +nini-1.1.0.ebuild:
+  Version bump from upstream (bug #130088)
 
   01 Feb 2006; Luis Medinas <metalgod@gentoo.org> nini-1.0.0-r1.ebuild:
   Added ~amd64 keyword. Closes bug #121115.
